# crowdin-desktop

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: build.yml
crowdin_desktop/: main.py  resource.qrc  resource_rc.py
crowdin_desktop/ui/: main.qml
notebooks/: openai.ipynb
