[project]
name = "crowdin-desktop"
version = "0.1.0"
description = "接入GPT的 Crowdin 桌面端，使用 PyQt 开发"
authors = [
    {name = "YunShu", email = "im@yunshu.site"},
]
dependencies = [
    "pyside6>=6.6.2",
    "pyinstaller>=6.4.0",
    "openai>=1.12.0",
    "crowdin-api-client>=1.14.1",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.11, <3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
[tool.pdm.scripts]
_.env_file = ".env"
# 运行项目
dev = {call = "crowdin_desktop:main"}
# 打包项目
pack = {cmd = "pyinstaller -F -w app.py"}

[tool.pdm.dev-dependencies]
dev = [
    "notebook>=7.1.0",
    "python-dotenv>=1.0.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
