[project]
name = "crowdin-desktop"
version = "0.1.0"
description = "接入GPT的 Crowdin 桌面端，使用 PyQt 开发"
authors = [{ name = "YunShu", email = "im@yunshu.site" }]
dependencies = [
    "pyside6>=6.6.2",
    "openai>=1.12.0",
    "crowdin-api-client>=1.14.1",
    "nuitka>=2.0.5",
]
requires-python = ">=3.11, <3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
_.env_file = ".env"
# 运行项目
dev = { call = "crowdin_desktop:main" }
rescompile = { cmd = [
    "pyside6-rcc",
    "-o",
    "crowdin_desktop/resource_rc.py",
    "crowdin_desktop/resource.qrc",
] }
clean = { shell = "rm -rf output" }
# 打包项目
pack = { composite = ["rescompile", "nuitka3 app.py"] }

[tool.pdm.dev-dependencies]
dev = ["notebook>=7.1.0", "python-dotenv>=1.0.1"]

[tool.pdm]
distribution = false

# [build-system]
# requires = ["pdm-backend"]
# build-backend = "pdm.backend"
